videos/cert-manager/resources/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin
  annotations:
    cert-manager.io/cluster-issuer: self-signed
spec:
  ingressClassName: "nginx"

  tls:
    - hosts:
        - app.example.com
      secretName: app-example-com-self-signed-ingress
  
  rules:
    - host: app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 8000
